Fixes for a number of bugs. Randomly shown error message. Re-ordering rendering of fields. Visibility of footer. Language setting for module Features.

--- a/sites/all/themes/wob_theme/css/wob_theme.css
+++ b/sites/all/themes/wob_theme/css/wob_theme.css
@@ -113,8 +113,9 @@ ul.secondary {
 #header, #footer {
 	background-color: #58A618;
 }
-#header .section {
-	padding: 5px 20px;
+#header .section .row {
+	padding-top: 5px;
+	padding-bottom: 5px;
 	position: relative;
 }
 #name-and-slogan {
@@ -132,6 +133,7 @@ ul.secondary {
 }
 #page-wrapper {
 	min-height: 100%;
+	position: relative;
 }
 #page {
 	padding-bottom: 40px;
@@ -141,6 +143,9 @@ ul.secondary {
 	margin-top: -40px;
 	color: white;
 	text-align: right;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
 }
 #footer a {
 	color: white;
